[package]
name = "aeroflux"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aeroflux-store"
path = "src/store.rs"

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tonic = "0.9"
prost = "0.11"
tokio-stream = "0.1.14"

[build-dependencies]
tonic-build = "0.9"
